# Agentic-RAG-System---Enterprise-AI-Chatbot-with-Guardrails-Observability

./: README.md  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
alembic/: env.py
config/: logging.yaml  settings.yaml
config/docker/: llm_providers.env
config/scaling/: docker-compose.yml  kubernetes-deployment.yaml  nginx.conf  prometheus.yml
config/services/: compliance_policies.yaml  dlp_rules.yaml  llm.yaml  observability.yaml  security_config.yaml  security_integration.py
deploy/: Dockerfile
deploy/compose/: Dockerfile.app  docker-compose.prod.yml  docker-compose.yml
deploy/configs/: redis.conf
examples/: provider_usage_example.py
frontend/: Dockerfile  jest.config.js  next.config.js  package-lock.json  package.json  playwright.config.test.ts  playwright.config.ts  setupTests.ts  tailwind.config.js  tsconfig.json
frontend/src/: middleware.ts
scripts/: create_docs_skeleton.sh  init_db.py  run_tests.py  validate_deployment.py
src/app/: deps.py  main.py
src/chunking/: __init__.py  strategies.py
src/config/: __init__.py  compliance.yaml  compliance_config.py  observability.py  requirements.txt  settings.py
src/core/: __init__.py  document_processor.py  embedding_service.py  observability_mixin.py  rag_pipeline.py  retriever.py  vector_store.py
src/examples/: guardrails_demo.py
src/guardrails/: __init__.py  citation_enforcer.py  compliance_logger.py  guardrails_orchestrator.py  middleware.py  pii_detector.py  topic_filter.py
src/ingestion/: __init__.py  (+1 more)
tests/: conftest.py  test_fixtures.py  test_memory_system.py
(+189 files in other folders)
